--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "expect": "^24.8.0",
     "express": "^4.16.4",
+    "jquery": "^3.4.1",
     "mocha": "^6.1.4",
     "socket.io": "^2.2.0"
   }
