--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.4",
     "jquery": "^3.4.1",
     "mocha": "^6.1.4",
+    "moment": "^2.24.0",
     "socket.io": "^2.2.0"
   }
 }
